assets/chaos_policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-store-front-traffic
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: store-front
  ingress:
  - fromEndpoints: []
  egress:
    - toEndpoints:
        - matchLabels:
            app: order-service
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: product-service
      toPorts:
        - ports:
            - port: "3002"
              protocol: TCP
