assets/fqdn_policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-order-service-traffic
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: order-service
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    - matchLabels:
        io.kubernetes.pod.namespace: default
        app: rabbitmq
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      rules:
        dns:
          - matchPattern: "rabbitmq.default.svc.cluster.local"
          - matchPattern: "*.microsoft.com"
          - matchPattern: '*.microsoft.com.cluster.local'
          - matchPattern: '*.microsoft.com.default.svc.cluster.local'
          - matchPattern: '*.microsoft.com.*.*.internal.cloudapp.net'
          - matchPattern: '*.microsoft.com.svc.cluster.local'
  - toFQDNs:
    - matchPattern: "*.microsoft.com"
    toPorts:
      - ports:
          - port: "443"
            protocol: TCP
